--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,9 @@
 }
 
 .inp .inp1{
-	width: 320px;
+	width: 300px;
 	height: 51px;
-	padding-top: 30px;
+	padding: 30px 10px 0 10px;
 	font-size: 60px;
 	text-align: right;
 	color: #fff;
@@ -36,8 +36,12 @@
 	position: relative;
 }
 .inp .inp2{
-	width: 320px;
-	height: 40px;
+	width: 300px;
+	height: 15px;
+	padding: 20px 10px 5px 10px;
+	text-align: right;
+	color: #fff;
+	font-size: 15px;
 	outline: 0;
 	border: none;
 	background-color: #D00038;
